--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/04/2020 04:29:00 AM</p>
+    <p class="lastupdate">09/04/2020 04:34:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">57.3&#176;F</td>
+        <td class="data">57.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">57.3&#176;F</td>
+        <td class="data">57.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">57.3&#176;F</td>
+        <td class="data">57.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.2&#176;F</td>
+        <td class="data">50.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">77%</td>
+        <td class="data">78%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.928 inHg (-0.023)</td>
+        <td class="data">29.931 inHg (-0.021)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">71.5&#176;F</td>
+        <td class="data">71.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">47%</td>
+        <td class="data">48%</td>
       </tr>
     </tbody>
   </table>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             65.1</span><br/>
-          <span title="04:27:07 AM">
-            57.3</span>
+          <span title="04:30:21 AM">
+            57.2</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:40:23 PM (Thursday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="04:27:07 AM" class="loval">
-            57.3</span>
+          <span title="04:30:21 AM" class="loval">
+            57.2</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:16 AM (Sunday)" class="loval">
@@ -269,8 +269,8 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="04:16:17 AM">
-            77</span><br/>
+          <span title="04:32:31 AM">
+            79</span><br/>
           <span title="12:00:01 AM">
             59</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">2 days, 13 hours, 42 minutes</td>
+      <td class="data">2 days, 13 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">2 days, 13 hours, 42 minutes</td>
+      <td class="data">2 days, 13 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
