--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/04/2020 04:49:00 AM</p>
+    <p class="lastupdate">09/04/2020 04:54:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">57.0&#176;F</td>
+        <td class="data">56.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">57.0&#176;F</td>
+        <td class="data">56.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">57.0&#176;F</td>
+        <td class="data">56.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.6&#176;F</td>
+        <td class="data">50.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">79%</td>
+        <td class="data">78%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.933 inHg (-0.016)</td>
+        <td class="data">29.933 inHg (-0.013)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph N (0&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">71.8&#176;F</td>
+        <td class="data">71.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             65.1</span><br/>
-          <span title="04:48:27 AM">
-            57.0</span>
+          <span title="04:51:01 AM">
+            56.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:40:23 PM (Thursday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="04:48:27 AM" class="loval">
-            57.0</span>
+          <span title="04:51:01 AM" class="loval">
+            56.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:16 AM (Sunday)" class="loval">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">2 days, 14 hours, 2 minutes</td>
+      <td class="data">2 days, 14 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">2 days, 14 hours, 2 minutes</td>
+      <td class="data">2 days, 14 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
