--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/04/2020 06:14:00 AM</p>
+    <p class="lastupdate">09/04/2020 06:19:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">55.4&#176;F</td>
+        <td class="data">55.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">55.4&#176;F</td>
+        <td class="data">55.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">55.4&#176;F</td>
+        <td class="data">55.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">49.7&#176;F</td>
+        <td class="data">49.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.936 inHg (0.003)</td>
+        <td class="data">29.937 inHg (0.002)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph NW (315&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">68.9&#176;F</td>
+        <td class="data">68.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             65.1</span><br/>
-          <span title="06:10:37 AM">
-            55.4</span>
+          <span title="06:18:59 AM">
+            55.2</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:40:23 PM (Thursday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="06:10:37 AM" class="loval">
-            55.4</span>
+          <span title="06:18:59 AM" class="loval">
+            55.2</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:16 AM (Sunday)" class="loval">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          5
+          4
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -472,8 +472,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             75.6</span><br/>
-          <span title="06:12:01 AM">
-            68.9</span>
+          <span title="06:18:01 AM">
+            68.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:03:02 PM (Thursday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">2 days, 15 hours, 27 minutes</td>
+      <td class="data">2 days, 15 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">2 days, 15 hours, 27 minutes</td>
+      <td class="data">2 days, 15 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
